base.scss: avoid scrollbar sliding

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,7 +12,11 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-
+html {
+    width: 100vw;
+    margin-right: calc(100vw - 100%);
+    overflow-x: hidden;
+}
 
 /**
  * Basic styling
